# mne-hfo

./: .codespellignore  .gitignore  .mailmap  .readthedocs.yml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  ignore_words.txt  index.html  pyproject.toml  requirements.txt  requirements_testing.txt  setup.cfg  setup.py  test_requirements.txt
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: circle_artifacts.yml  main.yml  unit_tests.yml
data/: dataset_description.json
dev/: .buildinfo  api.html  authors.html  contribute.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  use.html  whats_new.html  whats_new_previous_releases.html
dev/_modules/: index.html
dev/_sources/: api.rst.txt  contribute.rst.txt  index.rst.txt  tutorial.rst.txt  whats_new.rst.txt
dev/_static/: documentation_options.js
dev/auto_examples/: detect_hfos.html  working_with_bids.html
dev/tutorials/: Hilbert_test.html  basic_compute_hfos.html  comparing_detectors.html  compute_hfos_on_fedele_dataset.html  compute_hfos_on_fedele_dataset.ipynb
doc/: Makefile  api.rst  authors.rst  conf.py  contribute.rst  index.rst  install.rst  references.bib  tutorial.rst  use.rst  whats_new.rst  whats_new_previous_releases.rst
doc/_templates/: version-switcher.html
doc/auto_examples/: detect_hfos.rst  detect_hfos_codeobj.pickle  index.rst  searchindex.db  working_with_bids.rst  working_with_bids_codeobj.pickle
doc/sphinxext/: gen_cli.py
doc/tutorials/: Hilbert_test.ipynb  README.md  compute_hfos_on_fedele_dataset.ipynb
docs/: api.rst  conf.py  contribute.rst  index.rst  install.rst  requirements.txt  tutorial.rst  use.rst  whats_new.rst  whats_new_previous_releases.rst
docs/_templates/: docs-navbar.html  layout.html  navbar.html
docs/tutorials/: Hilbert_test.ipynb  basic_compute_hfos.ipynb  comparing_detectors.ipynb  convert_fedele_bids.py  convert_gotman_bids.py
examples/: 01_working_with_bids.py  README.rst  Untitled.ipynb  basic_hfo_detection_algorithms.py  cross_validation_hfo_detection.py  detect_hfos.py  working_with_bids.py
mne_hfo/: __init__.py  base.py  compare.py  config.py  detect.py  hodetect.py  io.py  posthoc.py  score.py  scores.py  simulate.py  sklearn.py  stats.py  utils.py  viz.py
mne_hfo/commands/: mne_bids_calibration_to_bids.py  mne_bids_count_events.py  mne_bids_cp.py  mne_bids_crosstalk_to_bids.py  mne_bids_inspect.py  mne_bids_mark_bad_channels.py  mne_bids_raw_to_bids.py  mne_bids_report.py  run.py
mne_hfo/docs/: __init__.py  docs.py
mne_hfo/tests/: conftest.py  test_compare.py  test_copyfiles.py  test_detect.py  test_inspect.py  test_io.py  test_path.py  test_pick.py  test_posthoc.py  test_read.py  test_report.py  test_score.py  test_simulation.py  test_stats.py  test_tsv_handler.py  test_update.py  test_utils.py  test_write.py
publication/: hfo_analysis_publication.py
stable/: authors.html  index.html  py-modindex.html  search.html  tutorial.html  use.html  whats_new_previous_releases.html
stable/auto_examples/: detect_hfos.html
stable/tutorials/: Hilbert_test.html
tests/: conftest.py  test_compare.py  test_detect.py  test_io.py  test_posthoc.py  test_score.py  test_simulation.py  test_stats.py  test_utils.py
v0.2/: api.html  contribute.html  genindex.html  install.html  objects.inv  searchindex.js  whats_new.html
v0.2/_modules/: index.html
v0.2/_static/: documentation_options.js
v0.2/auto_examples/: working_with_bids.html
(+93 files in other folders)
